Source/WebCore/inspector/front-end/UISourceCode.js
@@ -192,8 +192,10 @@ WebInspector.UISourceCode.prototype = {
         delete this._workingCopy;
         this.dispatchEventToListeners(WebInspector.UISourceCode.Events.WorkingCopyCommitted, {oldWorkingCopy: oldWorkingCopy, workingCopy: this.workingCopy()});
         WebInspector.workspace.dispatchEventToListeners(WebInspector.Workspace.Events.UISourceCodeContentCommitted, { uiSourceCode: this, content: this._content });
-        if (this._url && WebInspector.fileManager.isURLSaved(this._url))
+        if (this._url && WebInspector.fileManager.isURLSaved(this._url)) {
             WebInspector.fileManager.save(this._url, this._content, false);
+            WebInspector.fileManager.close(this._url);
+        }
     },
 
     /**
